compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/MultiplatformCommonFacade.java
public final class MyFacadeKt /* mypack.MyFacadeKt*/ {
  @org.jetbrains.annotations.NotNull()
  public static final @org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization getCommonVariable1();//  getCommonVariable1()

  @org.jetbrains.annotations.NotNull()
  public static final @org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization getCommonVariable2();//  getCommonVariable2()

  public static final void commonFunction1(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyCommonClass);//  commonFunction1(@org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass)

  public static final void commonFunction2(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization, @org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyCommonClass);//  commonFunction2(@org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass)

  public static final void setCommonVariable1(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization);//  setCommonVariable1(@org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization)

  public static final void setCommonVariable2(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization);//  setCommonVariable2(@org.jetbrains.annotations.NotNull() mypack.MyCommonClassWithActualization)
}
